Fix for datepicker z-index

--- a/public/stylesheets/_datepicker.scss
+++ b/public/stylesheets/_datepicker.scss
@@ -1,5 +1,5 @@
 #ui-datepicker-div {
-	z-index: 5;
+	z-index: 5 !important;
 	background: $white;
 	font-family: $raleway;
 	font-size: 1rem;
